# voice-ai-orch

./: .env.example  .gitignore  LICENSE  README.md  agent.py  api_server.py  conversation_logger.py  initialize_rag.py  miet.md  pyproject.toml  task.md
Prompt/: prompt.md
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/components/: DocUpload.tsx  PromptEditor.tsx  RagSources.tsx  Transcript.tsx  VoiceRoom.tsx
rag/: __init__.py  rag_engine.py
voice_agent/: __init__.py  pipeline.py  prompt_manager.py  voice_assistant.py
